--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal_button" data-modal-close>
+        <button type="button" class="modal__button" data-modal-close>
           <svg width="11" height="11">
             <use href="images/icons.svg#icon-button-icon"></use>
           </svg>
