--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
     <header>
       <div class="container header__container">
         <nav class="navigation">
-          <a href="./index.html" class="logo logo--start"
-            ><span class="logo__part">Web</span>Studio</a
+          <a href="./index.html" class="logo"
+            >Web<span class="logo--dark">Studio</span></a
           >
           <ul class="navigation__list">
             <li>
@@ -76,13 +76,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio1.jpg"
                   alt="laptop"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -96,13 +97,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio2.jpg"
                   alt="mecz koszykówki"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -118,13 +120,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio3.jpg"
                   alt="logo restauracji"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -138,13 +141,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio4.jpg"
                   alt="słuchawki"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -158,13 +162,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio5.jpg"
                   alt="pudełka"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -178,13 +183,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio6.jpg"
                   alt="monitor"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -198,13 +204,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio7.jpg"
                   alt="magazyn"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -218,13 +225,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio8.jpg"
                   alt="metka"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -238,13 +246,14 @@
             <li class="project-section__card">
               <div class="project-section__window">
                 <img
+                  class="project-section__picture"
                   src="images/portfolio9.jpg"
                   alt="laptop"
                   width="370"
                   height="294"
                 />
                 <div class="project-section__overlay">
-                  <p>
+                  <p class="project-section__overlay-description">
                     Technocrack jest popularną platformą wykorzystywaną do
                     rozpowszechniania koronawirusa. Firmy wykorzystują tę
                     platformę do celów szpiegowskich i ataków na
@@ -262,8 +271,8 @@
     <footer id="contact">
       <div class="container footer-container">
         <div>
-          <a href="./index.html" class="logo logo--end"
-            ><span class="logo__part">Web</span>Studio</a
+          <a href="./index.html" class="logo"
+            >Web<span class="logo--light">Studio</span></a
           >
           <address class="footer-contact">
             <ul class="footer-contact__wrapper">
