--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <header>
       <div class="container header__container">
         <nav class="navigation">
-          <a href="./index.html" class="logo logo--start"
-            ><span class="logo__part">Web</span>Studio</a
+          <a href="./index.html" class="logo"
+            >Web<span class="logo--dark">Studio</span></a
           >
           <ul class="navigation__list">
             <li>
@@ -457,8 +457,8 @@
     <footer id="contact">
       <div class="container footer-container">
         <div>
-          <a href="./index.html" class="logo logo--end"
-            ><span class="logo__part">Web</span>Studio</a
+          <a href="./index.html" class="logo"
+            >Web<span class="logo--light">Studio</span></a
           >
           <address class="footer-contact">
             <ul class="footer-contact__wrapper">
